--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -81,6 +81,21 @@
         <!-- Left links -->
       </div>
       <!-- Collapsible wrapper -->
+      <!-- Adding a search form  -->
+      <div class="col-sm-4 col-md-4 navbar-right">
+
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search.." name="">
+            <div class="input-group-btn">
+              <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i> search</button>
+            </div>
+          </div>
+
+        </form>
+      </div>
+      <!-- search form end -->
     </div>
     <!-- Container wrapper -->
   </nav>
